{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 40,
  "lineage": "bc0621b8-ccd3-8d1b-4e20-f546462e45dc",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-11T15:56:40.954-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ringed-rune-459418-n7/global/firewalls/hello-world-vpc-allow-health-checks",
            "log_config": [],
            "name": "hello-world-vpc-allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/networks/hello-world-vpc",
            "priority": 1000,
            "project": "ringed-rune-459418-n7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/firewalls/hello-world-vpc-allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-05-11T15:56:41.486-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/ringed-rune-459418-n7/global/firewalls/hello-world-vpc-allow-internal",
            "log_config": [],
            "name": "hello-world-vpc-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/networks/hello-world-vpc",
            "priority": 1000,
            "project": "ringed-rune-459418-n7",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/firewalls/hello-world-vpc-allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/ringed-rune-459418-n7/global/networks/hello-world-vpc",
            "mtu": 0,
            "name": "hello-world-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "ringed-rune-459418-n7",
            "routing_mode": "GLOBAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/networks/hello-world-vpc"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-11T15:48:33.641-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/ringed-rune-459418-n7/regions/us-central1/routers/hello-world-vpc-router",
            "name": "hello-world-vpc-router",
            "network": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/networks/hello-world-vpc",
            "project": "ringed-rune-459418-n7",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/regions/us-central1/routers/hello-world-vpc-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "ringed-rune-459418-n7/us-central1/hello-world-vpc-router/hello-world-vpc-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "hello-world-vpc-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "ringed-rune-459418-n7",
            "region": "us-central1",
            "router": "hello-world-vpc-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc",
            "module.vpc.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-11T15:48:34.086-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/ringed-rune-459418-n7/regions/us-central1/subnetworks/hello-world-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "hello-world-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/global/networks/hello-world-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "ringed-rune-459418-n7",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "172.16.0.0/20",
                "range_name": "hello-world-subnet-pods"
              },
              {
                "ip_cidr_range": "172.16.16.0/20",
                "range_name": "hello-world-subnet-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/ringed-rune-459418-n7/regions/us-central1/subnetworks/hello-world-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}